Fixed spacing and pseudo classes of links.

--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,20 @@ html {
   display: flex;
   justify-content: center;
 }
+ul {
+  padding-left: 0;
+}
 li {
   list-style-type: none;
   margin: 1em;
+}
+li a:link {
+  color: #3366cc;
+  text-decoration:none;
+}
+li a:hover {
+  color: black;
+  text-decoration:none;
 }
 .header {
   display: flex;
@@ -247,15 +258,16 @@ margin-bottom: 1.5em;
   font-family: 'Montserrat', sans-serif;
   padding: 1em;
 }
-a:link {
+/* li a:link {
   color: #3366cc;
 }
-a:hover {
+li a:visited {
   color: black;
 }
-a:visited {
+li a:hover {
   color: black;
-}
+} */
+
 .right-connect {
   background-image: url("../images/connect.png");
   width: 100%;
